k8s/cdash/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdash
  namespace: cdash
  labels:
    app: cdash
    svc: web
spec:
  selector:
    matchLabels:
      app: cdash
      svc: web
  replicas: 1
  template:
    metadata:
      labels:
        app: cdash
        svc: web
    spec:
      restartPolicy: Always
      containers:
      - name: cdash
        command: ["/bin/bash", "-c"]
        args:
          - >
            eval 'CDASH_CONFIG="$(CDASH_CONFIG_TEMPLATE)"' ;
            export CDASH_CONFIG ;
            exec /bin/bash /docker-entrypoint.sh
        image: kitware/cdash:spack_deploy_v4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: web
      nodeSelector:
        spack.io/node-pool: base
