k8s/cdash/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cdash
  namespace: cdash
  labels:
    app: cdash
    svc: web
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: cdash
    svc: web
